# airflow-dbt-metabase

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
conf/metabase/: metabase.db.mv.db  metabase.db.trace.db
metabase/: Dockerfile
projects/airflow/: Dockerfile  airflow.cfg  requirements.txt
projects/airflow/dags/: pokemon_dbt_dag.py
projects/airflow/logs/scheduler/: latest
projects/dbt/airflowdbt/: dbt_project.yml
projects/dbt/airflowdbt/models/pokemon/: schema.yml  top_20_pokemon.sql
projects/postgres/: docker_postgres_init.sql
